observability/base/loki/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: loki
spec:
  parentRefs:
    - name: platform
      namespace: infrastructure
  hostnames:
    - "loki-${cluster_name}.priv.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki
          port: 80
